# Airbnb-clone-code-Nomad-coder-

./: .gitmessage.txt  build.sh  pyproject.toml  render.yaml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializes.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_city_alter_perk_details_and_more.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py  0005_alter_experience_perks.py  0006_alter_experience_perks.py
houses/: admin.py  apps.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
medias/: models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
uploads/: 족발2.jfif
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
강의 정리/: #1. SET UP.md  #10 REST Framework.md  #14 GRAPHQL API.md  #15 Authentication.md  #17 Front end setup.md  #19 React Query.md  #2. OOP WITH PYTHON.md  #20. Authentication.md  #3. Django Basics.md  #4. django apps.md  #5.Users app.md  #7 ORM.md  #8. Power admin.md  test.md
오류 정리/: poetry not found.md
(+18 files in other folders)
